--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
 	<title>Lufem Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
  	<link rel="stylesheet" href="css/uikit.min.css" />
+ 	<link rel="stylesheet" href="css/style.css" />
     
 
 </head>
 <body>
+	<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  	<iframe frameborder="0" height="100%" width="100%" src="https://www.youtube.com/v/hFjOiAkN8ew?autoplay=1&amp;controls=0&amp;loop=1&amp;playlist=hFjOiAkN8ew&amp;rel=0&amp;showinfo=0&amp;autohide=1&amp;wmode=transparent&amp;hd=1&amp;iv_load_policy=3&amp;html5=1&amp;modestbranding=1"></iframe>
+	</div>
+
 	<header>
+
 	</header>
 	<main>
+	<div style="position: fixed; z-index: -99; width: 100%; height: 120%"></div>
+
 	<div class="uk-contrast">
   			<div class="uk-grid" data-uk-grid-margin="">
                 <div class="uk-width-1-1 uk-text-center">
@@ -56,7 +64,7 @@
             </div>
     </div>
 	</main>
-<script src="js/jquery.js"></script>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/uikit.min.js"></script>	
 	<footer></footer>
 </body>
